Fri Aug  8 13:21:17 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (SRCS): Delete malloc.c; libc now has a thread safe
	malloc. 
	(malloc.c): Delete file.

Mon Jun  9 21:18:46 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* cthreads.c (cthread_fork): Delete debugging oddity that crept
	into source.

Thu Apr  3 20:29:27 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* i386/csw.S: Define __ELF__ too.

Wed Feb 19 23:29:55 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* stack.c (__hurd_threadvar_stack_mask,
	__hurd_threadvar_stack_offset, __hurd_threadvar_max): Make extern.

Tue Feb 18 16:28:36 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* i386/thread.c (cproc_setup): Correctly leave space at top of
	stack for GNU per-thread variables.

Mon Nov 18 16:36:56 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* cprocs.c (cproc_create): Cast CHILD in assignment.

Mon Oct 21 22:05:48 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* i386/csw.S (CALL_MCOUNT): New macro.
	(cproc_swtich, cproc_start_wait, cproc_prepare): Use CALL_MCOUNT.

	* rwlock.h: Change extern inline protection to use new canonical
	method.
	* rwlock.c: Rewritten.

Wed Sep  4 09:06:09 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (VPATH): Look in $(asm_syntax) instead of old
	$(machine); Hurd configure now folds equivalent CPU types into
	asm_syntax. 

Thu Aug 29 12:50:37 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* i386/csw.S: Include <mach/i386/asm.h> instead of <i386/asm.h>.
	Define ELF before inclusion.

Sat Jul 20 15:47:24 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* Makefile (lndist-i386-files): Look for I386SRCS and I386HDRS in
	$(srcdir). 

Thu Jun  6 07:29:31 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* malloc.c (more_memory): Use assert_perror instead of MACH_CALL.
	"cthread_internals.h": Include removed.

Thu May  9 11:13:42 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>
